@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ae.apps.messagecounter"
-    android:versionCode="320"
+    android:versionCode="321"
     android:versionName="3.0" >
 
     <uses-sdk
