@@ -2,96 +2,110 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="@dimen/padding_large" >
+    android:orientation="vertical" >
 
-    <RelativeLayout
+    <!-- The toolbar -->
+
+    <include layout="@layout/toolbar" />
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="@dimen/padding_large" >
 
-        <ImageView
-            android:id="@+id/appIcon"
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <ImageView
+                android:id="@+id/appIcon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_gravity="start"
+                android:layout_margin="4dip"
+                android:layout_marginLeft="0dp"
+                android:layout_marginStart="0dp"
+                android:contentDescription="@string/empty_text"
+                android:padding="4dip"
+                android:src="@drawable/ic_launcher" />
+
+            <TextView
+                android:id="@+id/appVersion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:layout_margin="2dip"
+                android:layout_toEndOf="@+id/appIcon"
+                android:layout_toRightOf="@+id/appIcon"
+                android:text="@string/app_name"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/appDeveloper"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/appVersion"
+                android:layout_gravity="start"
+                android:layout_margin="2dip"
+                android:layout_toEndOf="@+id/appIcon"
+                android:layout_toRightOf="@+id/appIcon"
+                android:text="@string/app_version" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/appDeveloper"
+                android:layout_gravity="start"
+                android:layout_margin="2dip"
+                android:layout_toEndOf="@+id/appIcon"
+                android:layout_toRightOf="@+id/appIcon"
+                android:text="@string/app_developer_info" />
+        </RelativeLayout>
+
+        <View
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_gravity="start"
+            android:layout_height="1dip"
             android:layout_margin="4dip"
-            android:layout_marginLeft="0dp"
-            android:contentDescription="@string/empty_text"
-            android:padding="4dip"
-            android:src="@drawable/ic_launcher" />
-
-        <TextView
-            android:id="@+id/appVersion"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:layout_margin="2dip"
-            android:layout_toRightOf="@+id/appIcon"
-            android:text="@string/app_name"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/appDeveloper"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/appVersion"
-            android:layout_gravity="start"
-            android:layout_margin="2dip"
-            android:layout_toRightOf="@+id/appIcon"
-            android:text="@string/app_version" />
+            android:background="@color/app_theme_dark"
+            android:layerType="software" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/appDeveloper"
-            android:layout_gravity="start"
-            android:layout_margin="2dip"
-            android:layout_toRightOf="@+id/appIcon"
-            android:text="@string/app_developer_info" />
-    </RelativeLayout>
+            android:layout_marginBottom="@dimen/margin_medium"
+            android:layout_marginTop="@dimen/margin_medium"
+            android:text="@string/app_desc" />
 
-    <View
-        android:layout_width="wrap_content"
-        android:layout_height="1dip"
-        android:layout_margin="4dip"
-        android:background="@color/app_theme_dark"
-        android:layerType="software" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="3dip"
+            android:text="@string/app_source_code" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/margin_medium"
-        android:layout_marginTop="@dimen/margin_medium"
-        android:text="@string/app_desc" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="3dip"
+            android:text="@string/github_source_visible_url" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="3dip"
-        android:text="@string/app_source_code" />
-    
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="3dip"
-        android:text="@string/github_source_visible_url" />
-    
-    <View
-        android:layout_width="wrap_content"
-        android:layout_height="1dip"
-        android:layout_margin="4dip"
-        android:background="@color/app_theme_dark"
-        android:layerType="software" />
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="1dip"
+            android:layout_margin="4dip"
+            android:background="@color/app_theme_dark"
+            android:layerType="software" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="3dip"
-        android:text="@string/app_disclaim" />
-    
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="3dip"
+            android:text="@string/app_disclaim" />
+    </LinearLayout>
 
 </LinearLayout>
