@@ -1,12 +1,0 @@
-<resources>
-
-    <style name="AppTheme" parent="android:Theme.Holo.Light">
-        <item name="android:actionBarStyle">@style/AppActionBar</item>
-    </style>
-    
-    <!-- Styling the actionbar -->
-    <style name="AppActionBar" parent="@android:style/Widget.Holo.Light.ActionBar">
-        <item name="android:background">@color/app_theme_light</item>
-    </style>
-
-</resources>
