@@ -1,0 +1,9 @@
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
+    <style name="MessageCounterTheme" parent="AppTheme.Base">
+        <!-- 
+        <item name="android:windowContentTransitions">true</item>
+         -->
+    </style>
+
+</resources>
