@@ -1,7 +1,7 @@
 package com.ae.apps.messagecounter.fragments;
 
 import com.ae.apps.messagecounter.R;
-
+import android.annotation.SuppressLint;
 import android.os.Bundle;
 import android.support.v4.app.Fragment;
 import android.view.LayoutInflater;
@@ -10,6 +10,7 @@ import android.view.ViewGroup;
 
 public class AboutFragment extends Fragment {
 
+	@SuppressLint("InflateParams")
 	@Override
 	public View onCreateView(LayoutInflater inflater, ViewGroup container, Bundle savedInstanceState) {
 		return inflater.inflate(R.layout.fragment_about, null);
