@@ -188,10 +188,14 @@ MessageCounter 2.1.20 [December 2013]
  ------------------------------------
 	Version 3.0
  ------------------------------------
- MessageCounter 3.0.25 [November 2014] - Talisman (Material Design)
+ MessageCounter 3.0.30 [December 2014] - Talisman (Material Design)
   - Redesign Counter fragment 
   - Use CardView
   - Removed Chart Fragment as it is a bit buggy
   - Use Toolbar on applicable screens
   - basic material design 
   - Message Counter is enabled by default
+  
+ MessageCounter 3.0.32 [December 2014] - Talisman (Material Design)
+  - Removed Non Contact Messages option in settings
+  - Fix for NoSuchMethodError for getMinimumHeight
